Fixing miss-aligned toolbar
- Added position fixed, to fix issue with incorrect position of toolbar per this issue (https://github.com/draft-js-plugins/draft-js-plugins/issues/531)

--- a/draft-js-side-toolbar-plugin/src/toolbarStyles.css
+++ b/draft-js-side-toolbar-plugin/src/toolbarStyles.css
@@ -1,3 +1,3 @@
 .wrapper {
-  position: absolute;
+  position: fixed;
 }
